--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather&display=swap" rel="stylesheet">
 
     <title>Saylani Welfare Trust</title>
 </head>
@@ -16,24 +17,24 @@
 <body>
     <div class="container header">
         <div class="row">
-            <div class="col-3">
+            <div class="col-md-3">
                 <img src="images/facebook.png" alt="">
                 <img src="images/twitter.png" alt="">
                 <img src="images/instagram.png" alt="">
                 <img src="images/youtube.png" alt="">
                 <img src="images/whatsapp.png" alt="">
             </div>
-            <div class="col-6 header_text">
+            <div class="col-md-6 header_text">
                 <p>Millions of people's life has changed, millions more awaiting your donation</p>
             </div>
-            <div class="col-3">
+            <div class="col-md-3">
                 <button>UK Donor</button>
                 <button>Donate Now</button>
                 <button>SMIT Results</button>
             </div>
         </div>
     </div>
-    <div class="fix_header container-fluid">
+    <div class="fix_header container-fluid bg_white">
         <div class="container">
             <div class="row">
                 <div class="col-4">
@@ -56,9 +57,94 @@
         </div>
     </div>
     <img src="images/slider1.png" style="width: 100%;" alt="">
-    <div class="container-fluid">
-        <div class="container">
-
+    <div class="container-fluid news_bar bg-white">
+        <div class="container news_text">
+            <p style="text-align: center; color: white;"><span style="color: #00FF00">(News-1 Dated:15-06-2019)</span> PIAIC Next Phase Admission in Islamabad And Faisalabad" . <a href="">More Details</a></p>
+        </div>
+    </div>
+    <div class="container-fluid bg_white" style="padding: 50px 5px;">
+        <div class="container" style="text-align: center;">
+            <h1 class="font_2" style="font-size: 32px; font-weight: 600;"><span style="color: #316dc3;">INTRO</span><span style="color: #006618;">DUCTION</span></h1>
+            <span id="line">____</span><img id="favicon" src="images/favicon.png" alt=""><span id="line">____</span>
+            <br>
+            <p id="paragraph" style="text-align: justify; color: gray;">
+                Established in May 1999 by famous spiritual and religious scholar Maulana Bashir Ahmed Farooqui, Saylani Welfare International Trust was built on the fundamentals of breaking the cycle of poverty, alleviating the financial troubles of the poor, giving
+                people a chance to live a dignified life and spreading happiness. <br><br> We are an organization that believes in lighting up the lives of underprivileged people across the world. We endeavor to provide the best quality
+                services in areas including food, education, medical and social welfare free of cost to people living in the dark. With over 60 different sectors, we feed thousands of hungry people each day, hundreds more are given the hope of life through
+                medical health care, many are educated to become leaders of tomorrow and several are given the opportunity to stand on their feet financially. <br><br> Today, we are proud to say that our physical presence extends throughout Pakistan with
+                a vast network of 125 branches operating in major cities including Karachi, Lahore, Islamabad, Rawalpindi, Hyderabad and Faisalabad. Apart from Pakistan, we have overseas offices in the UK, USA and UAE as well. Our worldwide branches are
+                operating under the guidance of a team of over 2,000 working professionals who help almost 125,000 people on a daily basis. <br><br> We strongly believe that a little help goes a long way and our work would not be possible without the
+                generous support of our valuable donors. Our local and international donors have graciously lent us a hand by supporting our causes and enabling us to serve the needs of people in need.
+            </p>
+        </div>
+    </div>
+    <div class="container-fluid font_2" style="color: white;" id="blue_bar">
+        <div class="row">
+            <div class="col-md-3">
+                <img style="height: 40px;" src=" images/icon_food_png.png " alt=" ">
+                <h2 style="font-size: 42px; font-weight: 500;">125,000</h2>
+                <h6>DAILY DASTRAKHAN<span style="color: #00FF00; font-size: 18px; font-weight: 600;">(MONTHLY)</span></h6>
+            </div>
+            <div class="col-md-3">
+                <img style="height: 40px;" src="images/icon_family_png.png" alt="">
+                <h2 style="font-size: 42px; font-weight: 500;">7,500</h2>
+                <h6>FAMILY ADOPTION<span style="color: #00FF00; font-size: 18px; font-weight: 600;">(MONTHLY)</span></h6>
+            </div>
+            <div class="col-md-3">
+                <img style="height: 40px;" src="images/icon_medical_png.png" alt="">
+                <h2 style="font-size: 42px; font-weight: 500;">125,000</h2>
+                <h6>MEDICAL<span style="color: #00FF00; font-size: 18px; font-weight: 600;">(MONTHLY)</span></h6>
+            </div>
+            <div class="col-md-3">
+                <img style="height: 40px;" src="images/icon_education_png.png" alt="">
+                <h2 style="font-size: 42px; font-weight: 500;">125,000</h2>
+                <h6>EDUCATION<span style="color: #00FF00; font-size: 18px; font-weight: 600;">(MONTHLY)</span></h6>
+            </div>
+        </div>
+    </div>
+    <div class="container-fluid bg_white font_2" style="text-align: center; padding: 50px 100px;">
+        <h2 style="font-size: 32px; font-weight: 600;"><span style="color: #316dc3;">WHAT WE </span><span style="color: #006618;">ARE DOING?</span></h2>
+        <span id="line">__</span><img id="favicon" src="images/favicon.png" alt=""><span id="line">__</span>
+        <br>
+        <div class="row">
+            <div class="col-md-4">
+                <div class="card_content">
+                    <img style="height: 70px;" src="images/onlinesadqah.png" alt="">
+                    <h4 style="font-size: 18px; font-weight: 600; margin-top: 20px;">ONLINE SADQAH</h4>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card_content">
+                    <img style="height: 70px;" src="images/welfare.png" alt="">
+                    <h4 style="font-size: 18px; font-weight: 600; margin-top: 20px;">ONLINE SADQAH</h4>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card_content">
+                    <img style="height: 70px;" src="images/medical.png" alt="">
+                    <h4 style="font-size: 18px; font-weight: 600; margin-top: 20px;">ONLINE SADQAH</h4>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-4">
+                <div class="card_content">
+                    <img style="height: 70px;" src="images/Dastarkhwan.png" alt="">
+                    <h4 style="font-size: 18px; font-weight: 600; margin-top: 20px;">DASTARKHWAN</h4>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card_content">
+                    <img style="height: 70px;" src="images/ROPLANT.png" alt="">
+                    <h4 style="font-size: 18px; font-weight: 600; margin-top: 20px;">RO PLANT</h4>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card_content">
+                    <img style="height: 70px;" src="images/education.png" alt="">
+                    <h4 style="font-size: 18px; font-weight: 600; margin-top: 20px;">EDUCATION</h4>
+                </div>
+            </div>
         </div>
     </div>
     <!-- Optional JavaScript -->
