--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 </head>
 
 <body>
+    <a href="#"> <img id="up" src="images/up-arrow.png" alt=""></a>
     <div class="container header">
         <div class="row">
             <div class="col-md-3">
@@ -145,6 +146,94 @@
                     <h4 style="font-size: 18px; font-weight: 600; margin-top: 20px;">EDUCATION</h4>
                 </div>
             </div>
+        </div>
+    </div>
+    <div class="container-fluid bg-white font_2" style="padding: 70px;">
+        <div class="row">
+            <div class="col-md-8" style="color: #316dc3;">
+                <h3 style="font-size: 24px;font-weight: 600; margin-bottom: 20px;"><span style="border-bottom: 2px solid #006618; padding-bottom: 7px;">MIS</span>SION AND UPCOMING PROJECTS</h3>
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="card_content2">
+                            <img style="height: 32px;" src="images/Hepatitis.png" alt="">
+                            <h4 style="display: inline-block;font-size: 15px;font-weight: 600;">HEPATITIS</h4>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="card_content2">
+                            <img style="height: 32px;" src="images/housing.png" alt="">
+                            <h4 style="display: inline-block;font-size: 15px;font-weight: 600;">HOUSING SOCIETY</h4>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="card_content2">
+                            <img style="height: 32px;" src="images/IT.png" alt="">
+                            <h4 style="display: inline-block;font-size: 15px;font-weight: 600;">IT LITERACY</h4>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="card_content2">
+                            <img style="height: 32px;" src="images/tharparkar.png" alt="">
+                            <h4 style="display: inline-block;font-size: 15px;font-weight: 600;">THARPARKAR</h4>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4" style="color: #316dc3;">
+                <h3 style="font-size: 24px;font-weight: 600; margin-bottom: 20px;"><span style="border-bottom: 2px solid #006618; padding-bottom: 7px;">Upc</span>oming Events</h3>
+                <hr style="margin-top: 0px;">
+                <p style="text-align: justify; color: gray; width: 80%;">Saylani Welfare Distributing Ration & Clothes to affected people of Balochistan .More Details Entry Test Accouncement (Graphic Designing & Video Editing/Animation Course) On Sunday 3rd March 2019 @ 11:00Am Vanue: 4rh Floor, Saylani Welfare
+                    International Trust HeadOffice Bahadurabad .<a style="color: blue;">More Details</a></p>
+            </div>
+        </div>
+        <div class="container-fluid bg-white font_2" style="padding: 70px; text-align: center;">
+            <h1 class="font_2" style="font-size: 32px; font-weight: 600;"><span style="color: #316dc3;">IMAGE</span><span style="color: #006618;"> GALLERY</span></h1>
+            <span id="line">__</span><img id="favicon" src="images/favicon.png" alt=""><span id="line">__</span>
+            <br>
+            <br>
+            <div class="row">
+                <div class="col-md-12"><img style="height: 151px; margin: 1px;" src="images/rashan2.jpg" alt="">
+                    <img style="height: 151px; margin: 1px" src="images/food.jpg" alt="">
+                    <img style="height: 151px; margin: 1px" src="images/hazrat.jpg" alt="">
+                    <img style="height: 151px; margin: 1px" src="images/hazrat2.jpg" alt=""></div>
+            </div>
+        </div>
+    </div>
+    <div class="container-fluid bg-black" style="padding: 70px; color: #bbbbbb;">
+        <div class="row">
+            <div class="col-md-4">
+                <p>Head Office,<br> A-25, Bahadurabad Chowrangi Karachi, Pakistan</p>
+                <ul style="list-style-type: none;">
+                    <li><img src="images/tel.png" alt="">UAN: 111-729-526</li>
+                    <li><img src="images/world.png" alt="">(+0092-213) 4130786-90</li>
+                    <li><img src="images/tel.png" alt="">CELL: 92-311-1729526</li>
+                    <li><img src="images/tel.png" alt="">USA NO +1(716)941 7792</li>
+                    <li><img src="images/tel.png" alt="">UK NO (+44)115 970 6256</li>
+                    <li><img src="images/mail.png" alt="">info@saylaniwelfare.com</li>
+                </ul>
+            </div>
+            <div class="col-md-4">
+                <h5 class="font_2" style="font-size: 14px;font-weight: 600; margin-bottom: 20px; color: white;"><span style="border-bottom: 2px solid #006618; padding-bottom: 7px;">Useful</span> Links</h5>
+                <hr>
+            </div>
+            <div class="col-md-4">
+                <h5 class="font_2" style="font-size: 14px;font-weight: 600; margin-bottom: 20px; color: white;">Connect With Us</h5>
+                <div class="row">
+                    <div style="background-color: black;">
+                        <img style="height: 30px;" src="images/facebook.png" alt="">
+                        <img style="height: 30px;" src="images/twitter.png" alt="">
+                        <img style="height: 30px;" src="images/instagram.png" alt="">
+                        <img style="height: 30px;" src="images/youtube.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="container-fluid" style="color: white; padding-top:10px;">
+        <div class="container">
+            <p>Copyright © 2020 Saylani Welfare</p>
         </div>
     </div>
     <!-- Optional JavaScript -->
